--- a/_data/social.yml
+++ b/_data/social.yml
@@ -2,5 +2,10 @@
   url: https://twitter.com/ngzhio
   icon: fab fa-twitter
 - title: GitHub
-  url: https://github.com/ngzhio/jekyll-theme-hamilton
+  url: https://github.com/Ujung0622
   icon: fab fa-github
+- title: Website
+  url: https://ujung0622.github.io/
+  icon: fas fa-fw fa-link
+
+
