--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,6 +1,6 @@
 - title: Twitter
   url: https://twitter.com/ngzhio
-  icon: fab fa-twitter
+  icon:
 - title: GitHub
   url: https://github.com/Ujung0622
   icon: fab fa-github
